# gyselalibxx

./: .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.json  .pylintrc  .typos.toml  2d__spline__interpolator_2params_8yaml_8hpp_source.html  2patches__2d__non__periodic_8hpp_source.html  2patches__2d__non__periodic__non__uniform_8hpp_source.html  2patches__2d__non__periodic__uniform_8hpp_source.html  2patches__2d__onion__shape_8hpp_source.html  2patches__2d__onion__shape__non__uniform_8hpp_source.html  2patches__2d__onion__shape__uniform_8hpp_source.html  3patches__2d__non__periodic_8hpp_source.html  3patches__2d__non__periodic__non__uniform_8hpp_source.html  3patches__2d__non__periodic__uniform_8hpp_source.html  404.html  5patches__figure__of__eight_8hpp_source.html  9patches__2d__non__periodic__uniform_8hpp_source.html  9patches__2d__periodic__strips__uniform_8hpp_source.html  AUTHORS  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CollisionSpVparMu_8hpp_source.html  Doxyfile  LICENSE  Lagrange_8hpp_source.html  Lagrange__interpolator_8hpp_source.html  Lagrange__interpolator__batched_8hpp_source.html  README.md  Spline_interpolator_polar.html  TODO.md  adding_docs.html  advection__2d__rp_2params_8yaml_8hpp_source.html  advection__2d__rp_2test__cases_8hpp_source.html  advection__domain_8hpp_source.html  advection__field__rp_8hpp_source.html  advection__field__rtheta_8hpp_source.html  (+2510 more)
baselib/: CMakeLists.txt
baselib/include/: cartesiandistribution2d.hpp  configuration.hpp  coord2d.hpp  distributed2dfield.hpp  initialconditionner.hpp  simulation.hpp  simulationobserver.hpp  timestep.hpp
baselib/src/: cartesiandistribution2d.cpp
docs/: About.md  Adding_docs.md  CMakeLists.txt  CODING_STANDARD.md  CONTRIBUTING.html  CONTRIBUTING.md  Code_conventions.md  Common_compilation_problems.md  DDC_in_gyselalibxx.md  Libraries.md  README.md  Using_git.md  annotated.html  cartesiandistribution2d_8hpp_source.html  classCartesianDistribution2D-members.html  classCartesianDistribution2D.html  classCommandLineConfig-members.html  classCommandLineConfig.html  classCommandLineConfig__inherit__graph.map  classCommandLineConfig__inherit__graph.md5  classConfiguration-members.html  classConfiguration.html  classConfiguration__inherit__graph.map  classConfiguration__inherit__graph.md5  classDistributed2DField-members.html  classDistributed2DField.html  classFinitediffHeatSolver-members.html  classFinitediffHeatSolver.html  classFinitediffHeatSolver__inherit__graph.map  classFinitediffHeatSolver__inherit__graph.md5  classFixedConditions-members.html  classFixedConditions.html  classFixedConditions__inherit__graph.map  classFixedConditions__inherit__graph.md5  classInitialConditionner-members.html  classInitialConditionner.html  classInitialConditionner__inherit__graph.map  classInitialConditionner__inherit__graph.md5  classScreenPrinter-members.html  classScreenPrinter.html  (+62 more)
docs/development/: Adding_docs.html  Adding_docs.md  Development_tips.html  Development_tips.md  Using_git.html  Using_git.md  developer_FAQ.html  developer_FAQ.md
docs/first_steps/: DDC_in_gyselalibxx.html  DDC_in_gyselalibxx.md  getting_started.html  getting_started.md  install.html  install.md  landau_damping_tutorial.html  landau_damping_tutorial.md  profiling.html  profiling.md
docs/joss_paper/: paper.bib  paper.md
docs/jscript/: katex.js  mathjax.js
docs/latex/: distribution_function.txt  md_README.tex  namespacereadme__to__mkdocs.tex  namespaces.tex  refman.tex  visualise_bsplines.py
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
docs/setup/: getting_started.md  install.md
docs/standards/: CODING_STANDARD.html  CODING_STANDARD.md  coding_covariant_and_contravariant_tensors.html  coding_covariant_and_contravariant_tensors.md  mathematical_and_physical_conventions.html  mathematical_and_physical_conventions.md
docs/stylesheets/: extra.css
docs/template/: layout.xml
docs/troubleshooting/: Common_compilation_problems.html  Common_compilation_problems.md  Debugging_workflow.html  Debugging_workflow.md
docs/tutorials/: Adding_docs.md  CODING_STANDARD.md  Common_compilation_problems.md  DDC_in_gyselalibxx.md  getting_started.md  install.md  mathematical_and_physical_conventions.md
post-process/PythonScripts/: HDF5utils.py  MATHutils.py  READutils.py  YAMLutils.py  (+14 more)
src/: .clang-format  CMakeLists.txt  README.md  advection1d.cpp  advection1d.hpp  commandlineconfig.cpp  commandlineconfig.hpp  configuration.hpp  coord2d.hpp  distributed2dfield.cpp  distributed2dfield.hpp  distributedfield.cpp  distributedfield.hpp  distribution_function.h  distribution_function.txt  domain.hpp  expose_to_pdi.cpp  expose_to_pdi.h  finitediffheatsolver.cpp  finitediffheatsolver.hpp  fixedconditions.cpp  fixedconditions.hpp  geometry.hpp  index.html  initialconditionner.hpp  mesh.hpp  pdi_out.yml.h  pdi_out.yml.hpp  predcorr.cpp  predcorr.h  realdomain.hpp  simpleheat.cpp  simulation.cpp  simulation.hpp  simulationobserver.hpp  splitdistribution.hpp  timestep.hpp  view.hpp  vlasov.cpp  vlasov.hpp  (+2 more)
tests/: CMakeLists.txt  README.md  block_test.cpp  blockview.cpp  check_growthrate_freq.py  check_growthrate_freq_2d_cart.py  collisions_intra_gridvx.cpp  collisions_intra_maxwellian.cpp  femnonperiodicpoissonsolver.cpp  femperiodicpoissonsolver.cpp  fft.cpp  fluid_moments.cpp  index.html  kineticsource.cpp  krooksource.cpp  main.cpp  masks.cpp  maxwellian.cpp  mdomain.cpp  pdi.cpp  pdi.yml  quadrature.cpp  rk2.cpp  species_info.cpp  splines.cpp  splitvlasovsolver.cpp  taggedarray_test.cpp  test_splines.cpp  test_utils.hpp  tst.cpp  view.cpp
(+4992 files in other folders)
