# SPDX-License-Identifier: MIT

cmake_minimum_required(VERSION 3.15)

add_subdirectory(fft)
add_subdirectory(speciesinfo)
add_subdirectory(paraconfpp)
add_subdirectory(quadrature)
add_subdirectory(geometryXVx)
add_subdirectory(geometryRTheta)
add_subdirectory(interpolation)
add_subdirectory(advection)
