# SPDX-License-Identifier: MIT

cmake_minimum_required(VERSION 3.15)

add_subdirectory(utils)
add_subdirectory(speciesinfo)
add_subdirectory(io)
add_subdirectory(paraconfpp)
add_subdirectory(quadrature)
add_subdirectory(geometry5D)
add_subdirectory(geometryXVx)
add_subdirectory(geometryRTheta)
add_subdirectory(geometryXYVxVy)
add_subdirectory(interpolation)
add_subdirectory(multipatch)
add_subdirectory(advection)
add_subdirectory(timestepper)
add_subdirectory(collision)
add_subdirectory(pde_solvers)
