# SPDX-License-Identifier: MIT

add_subdirectory(data_types)
add_subdirectory(utils)
add_subdirectory(speciesinfo)
add_subdirectory(io)
add_subdirectory(paraconfpp)
add_subdirectory(quadrature)
add_subdirectory(geometryXVx)
add_subdirectory(geometryXY)
add_subdirectory(geometryRTheta)
add_subdirectory(geometryXYVxVy)
add_subdirectory(geometryVparMu)
add_subdirectory(interpolation)
add_subdirectory(mapping)
add_subdirectory(multipatch)
add_subdirectory(advection)
add_subdirectory(timestepper)
add_subdirectory(collisions)
add_subdirectory(mpi_parallelisation)
add_subdirectory(pde_solvers)
